@@ -1,3 +1,6 @@
+30/07/2010
+- bugfix passing scope attributes in doublequoted strings did not work at {include} {assign} and {append}
+
 25/07/2010
 - another bugfix of change from 23/07/2010 when compiling modifer
 
